start req venv file

--- a/fake_data/make_quant_data.ipynb
+++ b/fake_data/make_quant_data.ipynb
@@ -6,6 +6,44 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#columns we want to try and generate\n",
+    "\n",
+    "#person_id\n",
+    "#pilot_participant\n",
+    "#age_at_pilot_start\n",
+    "#gender_at_pilot_start\n",
+    "#post_code\n",
+    "#main_offence\n",
+    "#reoffended_conviction_date - can be blank\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
