define some columns to make fake quant data

--- a/fake_data/make_quant_data.ipynb
+++ b/fake_data/make_quant_data.ipynb
@@ -21,7 +21,8 @@
     "#gender_at_pilot_start\n",
     "#post_code\n",
     "#main_offence\n",
-    "#reoffended_conviction_date - can be blank\n"
+    "#reoffended_conviction_date - can be blank\n",
+    " "
    ]
   },
   {
