--- a/fake_data/make_quant_data.ipynb
+++ b/fake_data/make_quant_data.ipynb
@@ -5,7 +5,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from faker import Faker\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
