--- a/fake_data/make_qual_data.ipynb
+++ b/fake_data/make_qual_data.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#make sure you are in the venv_text virtual environment - can change up top in kernel > Change Kernel > venv_tensor"
+    "#make sure you are in the venv_text virtual environment - can change up top in kernel > Change Kernel > venv_text",
+    "#the reason for this is because sometimes torch and tensorflow can be difficult to install on its own",
+    "#so easier to do as separate venv to diagnose and compartmentalise your issues"
    ]
   },
   {
